--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -11,7 +11,7 @@
         <div id="secondary-nav" class="below-pic">
             <h3>Utlägg och fakturor</h3>
             <ul>
-                {% if user.profile.may_attest %}
+                {% if user.profile.may_view_attest %}
                     <li>
                         <a href="{% url 'admin-attest' %}">
                             Attestera
@@ -22,7 +22,7 @@
                     </li>
                 {% endif %}
                 
-                {% if user.profile.may_confirm %}
+                {% if user.profile.may_view_confirm %}
                     <li>
                         <a href="{% url 'admin-confirm' %}">
                             Bekräfta i pärmen
@@ -33,7 +33,7 @@
                     </li>
                 {% endif %}
                 
-                {% if user.profile.may_pay %}
+                {% if user.profile.may_view_pay %}
                     <li>
                         <a href="{% url 'admin-pay' %}">
                             Betala
@@ -44,7 +44,7 @@
                     </li>
                 {% endif %}
                 
-                {% if user.profile.may_account %}
+                {% if user.profile.may_view_account %}
                     <li>
                         <a href="{% url 'admin-account' %}">
                             Bokför
