--- a/templates/expenses/new.html
+++ b/templates/expenses/new.html
@@ -71,6 +71,19 @@
                 </div>
             </div>
 
+            <div class="form-entry">
+                <span class="description">
+                    <label for="is-digital">
+                        Digitalt:
+                    </label>
+                    <span class="hint"></span>
+                </span>
+                <div class="input">
+                    <input type="checkbox" style="margin-top: 0.7em; width: 1.4em; height: 1.4em" name="is-digital" id="is-digital" />
+                </div>
+                <p>Klicka i denna om originalformatet av kvittot är digitalt.</p>
+            </div>
+
             <div class="clearfix"></div>
         </div>
 
