--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -7,40 +7,46 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.2/vue.min.js"></script>
 <div id="data">
     <p>Här kan du hitta alla kvitton som inte bekräftats finns i pärmen.</p>
-        <table v-if="expenses.length > 0">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>ID</th>
-                    <th>Beskrivning</th>
-                    <th>Ägare</th>
-                    <th>Belopp</th>
-                </tr>
-            </thead>
-            <tr v-for="expense in expenses">
-                <td v-if="!expense.confirmed">
-                    <form v-on:submit.prevent="conf(expense)" method="POST" :action="'expense/' + expense.id + '/confirm/'">
-                        {% csrf_token %}
-                        <button class="theme-color btn-color" v-on:click="conf(expense, $event)">Bekräfta</button>
-                    </form>
-                </td>
-                <td v-else>
-                    Bekräftad
-                </td>
-                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a></td>
-                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a></td>
-                <td><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
-                <td v-text="expense.amount + ' kr'"></td>
+    <label for="digital" style="padding-right: 0.5em;">Visa endast digitala</label><input v-model="digital" type="checkbox" id="digital" /><br />
+    <label for="analog" style="padding-right: 0.5em;">Visa endast analoga</label><input v-model="analog" type="checkbox" id="analog" />
+    <table v-if="expenses.length > 0">
+        <thead>
+            <tr>
+                <th></th>
+                <th>ID</th>
+                <th v-if="!(digital || analog)">Digitalt</th>
+                <th>Beskrivning</th>
+                <th>Ägare</th>
+                <th>Belopp</th>
             </tr>
-        </table>
-        <p v-else><b>Det finns inga icke-godkända kvitton i pärmen. Bra jobbat!</b></p>
+        </thead>
+        <tr v-for="expense in expenses" v-if="!(digital && expense.is_digital !== true || analog && expense.is_digital !== false)">
+            <td v-if="!expense.confirmed">
+                <form v-on:submit.prevent="conf(expense)" method="POST" :action="'expense/' + expense.id + '/confirm/'">
+                    {% csrf_token %}
+                    <button class="theme-color btn-color" v-on:click="conf(expense, $event)">Bekräfta</button>
+                </form>
+            </td>
+            <td v-else>
+                Bekräftad
+            </td>
+            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a></td>
+            <td v-if="!(digital || analog)"><p v-if="expense.is_digital">Ja</p><p v-else-if="expense.is_digital == false">Nej</p></td>
+            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a></td>
+            <td><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
+            <td v-text="expense.amount + ' kr'"></td>
+        </tr>
+    </table>
+    <p v-else><b>Det finns inga icke-godkända kvitton i pärmen. Bra jobbat!</b></p>
 </div>
 
 <script type="text/javascript">
     new Vue({
-        el: '#data', 
+        el: '#data',
         data: function () {
             return {
+                digital: false,
+                analog: false,
                 expenses: {% autoescape off %}{{ confirmable_expenses }}{% endautoescape %}
             }
         },
@@ -70,7 +76,7 @@
                     this.$set(this.expenses, idx, exp)
                 })
                 if (e) e.preventDefault()
-            }  
+            },
         }
     })
 </script>
