Fix committees not showing up in filtering menu when only showing up in invoices

--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -69,12 +69,12 @@
             }
         },
         created: function() {
-            this.committees = Array.from(new Set([].concat.apply([], this.expenses.map(x => x.committees))))
+            this.committees = Array.from(new Set([
+                ...this.expenses.flatMap(x => x.committees),
+                ...this.invoices.flatMap(x => x.committees),
+            ]))
             this.committees.sort((a, b) => a.localeCompare(b, 'sv-SE'));
         },
-        methods: {
-
-        }
     })
 </script>
 {% endblock %}
