--- a/templates/expenses/new.html
+++ b/templates/expenses/new.html
@@ -94,7 +94,7 @@
             <thead>
                 <tr>
                     <th style="width:30px"></th>
-                    <th>Nämnd</th>
+                    <th>Resultatställe</th>
                     <th>Sek. resultatställe</th>
                     <th>Budgetpost</th>
                     <th>Summa</th>
@@ -110,19 +110,19 @@
                 <td>
                   <div class="input">
                     <div class="select">
-                      <select name="committee[]" v-model="expense_part.committeeId" required>
-                        <option value="0">- Välj -</option>
+                      <select name="costCentres[]" v-model="expense_part.costCentre" required v-on:change="updateSecondaryCostCentres()">
+                        <option value="">- Välj -</option>
                         <optgroup label="Nämnder">
-                          <option v-for="committee in activeCommittees().filter(c => c.type == 'committee')"
-                                  :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
+                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'committee')"
+                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
                         </optgroup>
                         <optgroup label="Projekt">
-                          <option v-for="committee in activeCommittees().filter(c => c.type == 'project')"
-                                  :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
+                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
+                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
                         </optgroup>
                         <optgroup label="Övrigt">
-                          <option v-for="committee in activeCommittees().filter(c => c.type != 'committee' && c.type != 'project')"
-                                  :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
+                          <option v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.type != 'project')"
+                                  :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
                         </optgroup>
                       </select>
                     </div>
@@ -130,14 +130,18 @@
                 </td>
                 <td>
                     <div class="input">
-                        <div class="select" v-if="expense_part.committeeId > 0">
-                            <select name="costCentre[]" v-model="expense_part.costCentreId" required>
-                                <option value="0">- Välj -</option>
-                                <option v-for="costCentre in activeCostCentres(expense_part)" v-text="costCentre.name" v-bind:value="costCentre.id"></option>
+                        <div class="select" v-if="expense_part.costCentre != ''">
+                            <select name="secondaryCostCentres[]" v-model="expense_part.secondaryCostCentre" required v-on:change="updateBudgetLines()">
+                                <option value="">- Välj -</option>
+                                <option
+                                    v-for="secondaryCostCentre in secondaryCostCentres.get(expense_part.costCentre)"
+                                    v-text="secondaryCostCentre.SecondaryCostCentreName"
+                                    v-bind:value="secondaryCostCentre.SecondaryCostCentreID+','+secondaryCostCentre.SecondaryCostCentreName"
+                                ></option>
                             </select>
                         </div>
                         <div class="select disabled" v-else>
-                            <select name="costCentre[]" required disabled>
+                            <select name="secondaryCostCentres[]" required disabled>
                                 <option value="0">- Välj nämnd först -</option>
                             </select>
                         </div>
@@ -145,14 +149,18 @@
                 </td>
                 <td>
                     <div class="input">
-                        <div class="select" v-if="expense_part.committeeId > 0 && expense_part.costCentreId > 0">
-                            <select name="budgetLine[]" v-model="expense_part.budgetLineId" required>
-                                <option value="0">- Välj -</option>
-                                <option v-for="budgetLine in committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId).length == 0 ? [] : committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId)[0].budget_lines" v-text="budgetLine.name" v-bind:value="budgetLine.id"></option>
+                        <div class="select" v-if="expense_part.costCentre != '' && expense_part.secondaryCostCentre != ''">
+                            <select name="budgetLines[]" v-model="expense_part.budgetLine" required>
+                                <option value="">- Välj -</option>
+                                <option
+                                    v-for="budgetLine in budgetLines.get(expense_part.secondaryCostCentre)"
+                                    v-text="budgetLine.BudgetLineName"
+                                    v-bind:value="budgetLine.BudgetLineID+','+budgetLine.BudgetLineName"
+                                ></option>
                             </select>
                         </div>
                         <div class="select disabled" v-else>
-                            <select name="budgetLine[]" required disabled>
+                            <select name="budgetLines[]" required disabled>
                                 <option value="0">- Välj sek. resultatställe först -</option>
                             </select>
                         </div>
@@ -160,7 +168,7 @@
                 </td>
                 <td>
                     <div class="input">
-                      <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amount[]" required>
+                      <input type="number" placeholder="Fyll i summa" step="0.01" v-model="expense_part.amount" name="amounts[]" required>
                     </div>
                 </div>
                 </td>
@@ -193,26 +201,26 @@
 
     new Vue({
         el: '#form',
-        data: function () {
+        data: function() {
             return {
-                committees: [],
-                expense_parts: [
-                {
-                    committeeId: 0,
-                    costCentreId: 0,
-                    budgetLineId: 0,
-                    amount: 0
-                }
-                ],
+                costCentres: [],
+                secondaryCostCentres: new Map(),
+                budgetLines: new Map(),
+                expense_parts: [{
+                    costCentre: '',
+                    secondaryCostCentre: '',
+                    budgetLine: '',
+                    amount: 0,
+                }],
                 dragStatus: 0,
-                files: []
+                files: [],
             }
         },
         created: function () {
-            fetch('{{ budget_url }}/api/committees?verbose')
+            fetch('{{ budget_url }}/api/CostCentres')
                 .then(res => res.json())
                 .then(res => {
-                    this.committees = res.sort((a, b) => a.name.localeCompare(b.name));
+                    this.costCentres = res.sort((a, b) => a.CostCentreName.localeCompare(b.CostCentreName));
                 })
         },
         computed: {
@@ -221,18 +229,36 @@
             },
             isDragging: function() {
                 return this.dragStatus === 1
-            }
+            },
         },
         methods: {
-            activeCostCentres: function (expense_part) {
-                let cost_centres = this.committees
-                                       .find(x => x.id == expense_part.committeeId)
-                                       .cost_centres;
-                cost_centres = cost_centres.filter(cc => cc.budget_lines.length != 0);
-                return cost_centres;
+            updateSecondaryCostCentres: function () {
+                for (const part of this.expense_parts) {
+                    if (part.costCentre == '') continue;
+                    if (!this.secondaryCostCentres.has(part.costCentre)) {
+                        fetch('{{ budget_url }}/api/SecondaryCostCentres?id=' + part.costCentre.split(',')[0])
+                            .then(res => res.json())
+                            .then(res => {
+                                this.secondaryCostCentres.set(part.costCentre, res);
+                                // Make vue understand that secondaryCostCentres has changed
+                                this.secondaryCostCentres = new Map(this.secondaryCostCentres);
+                            })
+                    }
+                }
             },
-            activeCommittees: function() {
-                return this.committees.filter(c => !c.inactive);
+            updateBudgetLines: function () {
+                for (const part of this.expense_parts) {
+                    if (part.secondaryCostCentre == '') continue;
+                    if (!this.budgetLines.has(part.secondaryCostCentre)) {
+                        fetch('{{ budget_url }}/api/BudgetLines?id=' + part.secondaryCostCentre.split(',')[0])
+                            .then(res => res.json())
+                            .then(res => {
+                                this.budgetLines.set(part.secondaryCostCentre, res);
+                                // Make vue understand that budgetLines has changed
+                                this.budgetLines = new Map(this.budgetLines);
+                            })
+                    }
+                }
             },
             deleteFile: function(file) {
                 this.files = this.files.filter(f => f !== file)
@@ -320,7 +346,7 @@
                 this.expense_parts.splice(i, 1)
             },
 	        validateBudgetLines: function () {
-		        return Array.prototype.filter.call((this.expense_parts), (budget => budget.budgetLineId > 0)).length == this.expense_parts.length
+		        return Array.prototype.filter.call((this.expense_parts), (budget => budget.budgetLine != '')).length == this.expense_parts.length
 	        }
         }
     })
